--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,16 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem
+    --radius: 0.5rem;
+
+    /* Adding custom color variables */
+    --navy-blue-800: 216 29% 23%;
+    --navy-blue-600: 216 21% 31%;
+    --white-500: 0 0% 100%;
+    --white-400: 180 8% 95%
+
+    /* Adding custom font variables */
+
   }
   .dark {
     --background: 240 10% 3.9%;
@@ -61,6 +70,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-primary text-foreground;
   }
 }
